# rtx-chat

./: .dockerignore  .env  .gitignore  Dockerfile.backend  README.md  check_db.py  docker-compose.yml  hello.py  neo4j_mcp.py  pyproject.toml  test_mcp.py  test_neo4j.py  test_neo4j_pytest.py  test_story.md
.github/: copilot-instructions.md
app/: agent.py  context_manager.py  global_settings.py  graph_models.py  main.py  memory_tools.py  neo4j_client.py  schemas.py  tools.py
app/routers/: __init__.py  agents.py  artifacts.py  chat.py  conversations.py  knowledge.py  memories.py  models.py  modes.py  settings.py
app/tools/: __init__.py  code.py  filesystem.py  knowledge.py  memory.py  other.py  web.py
data/: app_settings.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/memories/: page.tsx
frontend/app/psych-memories/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/settings/_components/: AgentsTab.tsx  ModesTab.tsx
frontend/components/: app-sidebar.tsx  mode-toggle.tsx  page-header.tsx
frontend/components/ai-elements/: confirmation.tsx  message.tsx
frontend/components/ui/: dialog.tsx  sidebar.tsx
frontend/components/ui/ai/: message.tsx  prompt-input.tsx  reasoning.tsx  task.tsx
frontend/lib/: store.ts
memory_db/: chroma.sqlite3
